# ruby-c2pa

./: .gitignore  .mise.toml  README.md  Rakefile  ruby-c2pa.gemspec
ext/c2pa_native/: Cargo.toml  extconf.rb
ext/c2pa_native/src/: lib.rs
lib/: c2pa.rb
lib/c2pa/: actions.rb  error.rb  manifest.rb  version.rb
test/: c2pa_test.rb
