[package]
name = "c2pa_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "c2pa_native"
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = [] }
c2pa = { version = "0.78", features = ["file_io"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
